pages/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

* {
  box-sizing: border-box;
}

html {
  color-scheme: dark;
}

body {
  color: white;
  background: black;
}

